--- a/style.css
+++ b/style.css
@@ -22,6 +22,16 @@ form{
 	height: 80vh;
 }
 
+.opt{
+	width: 80%;
+	margin: 30px;
+    padding: 15px;
+    background: #f5f5f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
 form h3{
 	margin: 5px;
 	margin-bottom: 20px;
